# junos-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml  release-please-config.json  server.json
.github/: copilot-instructions.md
.github/workflows/: pypi.yaml  release-please.yml  release.yml  test.yml
junos_mcp/: __init__.py  __main__.py  pool.py  server.py
junos_ops_mcp/: __init__.py  __main__.py  server.py
tests/: test_pool.py  test_server.py  test_version_consistency.py
