[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "junos-mcp"
dynamic = ["version"]
description = "MCP server for junos-ops: expose Juniper device operations to AI assistants"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    {name = "AIKAWA Shigechika"},
]
keywords = ["juniper", "junos", "mcp", "model-context-protocol", "network", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0",
    "junos-ops>=0.14.1",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.scripts]
junos-mcp = "junos_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/shigechika/junos-mcp"
Repository = "https://github.com/shigechika/junos-mcp"
Issues = "https://github.com/shigechika/junos-mcp/issues"

[tool.setuptools]
packages = ["junos_mcp"]

[tool.setuptools.dynamic]
version = {attr = "junos_mcp.__version__"}
